@@ -8,6 +8,7 @@ New features:
 
 Enhancements:
 
+* Add foreign keys to activities table
 * Add foreign keys to reminders, reminder rules, contacts and life events tables
 * Add number of life events on the contact profile page
 
